# Search-Engine

./: .gitignore  AVLtree.h  AVLtreeTest.h  CMakeLists.txt  DocParser.h  Document.md  DocumentParser.h  Persist.h  main.cpp  queryPro.h  rapidJSONExample.cpp  stopwords.txt
sample_data/coll_1/: news_0064568.json
sample_data/coll_2/: news_0064571.json
test/: test_AVLtree.cpp  test_Persistence.cpp
